@@ -1,3 +1,12 @@
+2009-03-15  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Replaced letter that differenciate blocks for
+	  color blinds by ASCII symbols that are locale
+	  agnostic.
+	  Merged from trunk 3775
+
+	* src/hanoi-activity/hanoi.c: (hanoi_create_item):
+
 2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Fixed an annoying bug in the locale selection.
